--- a/incubator/parse/templates/secrets.yaml
+++ b/incubator/parse/templates/secrets.yaml
@@ -14,9 +14,9 @@ data:
   {{ else }}
   master-key: {{ randAlphaNum 10 | b64enc | quote }}
   {{ end }}
-  {{ if .Values.parseDashboard.enabled }}
-  {{ if .Values.parseDashboard.password }}
-  dashboard-password: {{ default "" .Values.parseDashboard.password | b64enc | quote }}
+  {{ if .Values.dashboard.enabled }}
+  {{ if .Values.dashboard.password }}
+  dashboard-password: {{ default "" .Values.dashboard.password | b64enc | quote }}
   {{ else }}
   dashboard-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ end }}
