enabling  PVC as default for MongoDB

--- a/incubator/mean/values.yaml
+++ b/incubator/mean/values.yaml
@@ -47,7 +47,7 @@ mongodb:
   ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
   ##
   persistence:
-    enabled: false
+    enabled: true
     storageClass: default
     accessMode: ReadWriteOnce
     size: 8Gi
