--- a/incubator/mean/templates/pvc.yaml
+++ b/incubator/mean/templates/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ template "fullname" . }}
   annotations:
   {{- if .Values.persistence.storageClass }}
-    volume.beta.kubernetes.io/storage-class: {{ default ""  .Values.persistence.storageClass | quote }}
+    volume.beta.kubernetes.io/storage-class: {{ .Values.persistence.storageClass | quote }}
   {{- else }}
     volume.alpha.kubernetes.io/storage-class: default
   {{- end }}
