mean: mount PVC for app data

--- a/incubator/mean/templates/deployment.yaml
+++ b/incubator/mean/templates/deployment.yaml
@@ -49,7 +49,7 @@ spec:
             "name": "fixing-permissions",
             "image": "{{ .Values.image }}",
             "imagePullPolicy": "{{ .Values.imagePullPolicy }}",
-            "command": [ "/bin/sh", "-c" , "chown bitnami:bitnami -R /app /home/bitnami"],
+            "command": [ "/bin/sh", "-c" , "chown bitnami:bitnami -R /app /home/bitnami /app/data"],
             "volumeMounts": [
               {
                 "name": "app",
@@ -114,11 +114,20 @@ spec:
         volumeMounts:
         - name: app
           mountPath: /app
+        - name: data
+          mountPath: /app/data
         - name: config
           mountPath: /app/config
       volumes:
         - name: app
           emptyDir: {}
+        - name: data
+        {{- if .Values.persistence.enabled }}
+          persistentVolumeClaim:
+            claimName: {{ template "fullname" . }}
+        {{- else }}
+          emptyDir: {}
+        {{- end }}
         - name: config
           configMap:
             name: {{ template "fullname" . }}
