--- a/incubator/mean/templates/deployment.yaml
+++ b/incubator/mean/templates/deployment.yaml
@@ -49,7 +49,7 @@ spec:
             "name": "fixing-permissions",
             "image": "{{ .Values.image }}",
             "imagePullPolicy": "{{ .Values.imagePullPolicy }}",
-            "command": [ "/bin/sh", "-c" , "chown bitnami:bitnami -R /app /home/bitnami /app/data"],
+            "command": [ "/bin/sh", "-c" , "chown bitnami:bitnami -R /app /home/bitnami {{ .Values.persistence.path }}"],
             "volumeMounts": [
               {
                 "name": "app",
@@ -115,7 +115,7 @@ spec:
         - name: app
           mountPath: /app
         - name: data
-          mountPath: /app/data
+          mountPath: {{ .Values.persistence.path }}
         - name: config
           mountPath: /app/config
       volumes:
