mean: turn off app data persistence by default
the sample todo app does not require a persistent data storage volume

--- a/incubator/mean/templates/deployment.yaml
+++ b/incubator/mean/templates/deployment.yaml
@@ -54,6 +54,10 @@ spec:
               {
                 "name": "app",
                 "mountPath": "/app"
+              },
+              {
+                "name": "data",
+                "mountPath": "{{ .Values.persistence.path }}"
               }
             ]
           }
