--- a/incubator/node/templates/deployment.yaml
+++ b/incubator/node/templates/deployment.yaml
@@ -51,13 +51,16 @@ spec:
           httpGet:
             path: /
             port: http
-          initialDelaySeconds: 120
+          initialDelaySeconds: 180
+          periodSeconds: 5
           timeoutSeconds: 5
+          failureThreshold: 10
         readinessProbe:
           httpGet:
             path: /
             port: http
           initialDelaySeconds: 5
+          periodSeconds: 5
           timeoutSeconds: 1
         resources:
 {{ toYaml .Values.resources | indent 10 }}
