--- a/incubator/node/templates/deployment.yaml
+++ b/incubator/node/templates/deployment.yaml
@@ -15,18 +15,30 @@ spec:
         app: {{ template "fullname" . }}
       annotations:
         pod.beta.kubernetes.io/init-containers: '[
-            {
-                "name": "git-clone-app",
-                "image": "{{ .Values.image }}",
-                "imagePullPolicy": "{{ .Values.imagePullPolicy }}",
-                "command": [ "/bin/sh", "-c" , "git clone {{ .Values.repository }} /app && git checkout {{ .Values.revision }}" ],
-                "volumeMounts": [
-                    {
-                        "name": "node-data",
-                        "mountPath": "/app"
-                    }
-                ]
-           }
+          {
+            "name": "git-clone-app",
+            "image": "{{ .Values.image }}",
+            "imagePullPolicy": "{{ .Values.imagePullPolicy }}",
+            "command": [ "/bin/sh", "-c" , "git clone {{ .Values.repository }} /app && git checkout {{ .Values.revision }}" ],
+            "volumeMounts": [
+              {
+                "name": "node-data",
+                "mountPath": "/app"
+              }
+            ]
+          },
+          {
+            "name": "npm-install",
+            "image": "{{ .Values.image }}",
+            "imagePullPolicy": "{{ .Values.imagePullPolicy }}",
+            "command": [ "/bin/sh", "-c" , "npm install" ],
+            "volumeMounts": [
+              {
+                "name": "node-data",
+                "mountPath": "/app"
+              }
+            ]
+          }
         ]'
     spec:
       containers:
@@ -41,7 +53,6 @@ spec:
         - "-ec"
         -  |
           chown -R bitnami:daemon /app
-          su  bitnami -c 'PATH=$PATH:/opt/bitnami/node/bin/ npm install'
           su  bitnami -c 'PATH=$PATH:/opt/bitnami/node/bin/ npm start'
         ports:
         - name: http
