node: apply read-only filesystem security context on deployment pods

--- a/incubator/node/templates/deployment.yaml
+++ b/incubator/node/templates/deployment.yaml
@@ -59,6 +59,8 @@ spec:
     spec:
       containers:
       - name: {{ template "fullname" . }}
+        securityContext:
+          readOnlyRootFilesystem: true
         image: "{{ .Values.image }}"
         imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         env:
