--- a/incubator/sugarcrm/Chart.yaml
+++ b/incubator/sugarcrm/Chart.yaml
@@ -11,4 +11,4 @@ maintainers:
 - name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
-icon: https://d33np9n32j53g7.cloudfront.net/assets/stacks/sugarcrm/img/sugarcrm-stack-110x117-4591448c2217c45bc88d95d1509ee444.png
+icon: https://bitnami.com/assets/stacks/sugarcrm/img/sugarcrm-stack-110x117.png
