--- a/incubator/sugarcrm/templates/sugarcrm-pvc.yaml
+++ b/incubator/sugarcrm/templates/sugarcrm-pvc.yaml
@@ -9,7 +9,11 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
   annotations:
-    volume.alpha.kubernetes.io/storage-class: {{ .Values.persistence.sugarcrm.storageClass | quote }}
+  {{- if .Values.persistence.sugarcrm.storageClass }}
+    volume.beta.kubernetes.io/storage-class: {{ .Values.persistence.sugarcrm.storageClass | quote }}
+  {{- else }}
+    volume.alpha.kubernetes.io/storage-class: default
+  {{- end }}
 spec:
   accessModes:
     - {{ .Values.persistence.sugarcrm.accessMode | quote }}
