--- a/incubator/sugarcrm/templates/secrets.yaml
+++ b/incubator/sugarcrm/templates/secrets.yaml
@@ -14,4 +14,4 @@ data:
   {{- else }}
   sugarcrm-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{- end }}
-  smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
+  sugarcrm-smtp-password: {{ default "" .Values.sugarcrmSmtpPassword | b64enc | quote }}
