sugarcrm: pause deployment if `sugarcrmHost` is not specified

--- a/incubator/sugarcrm/templates/deployment.yaml
+++ b/incubator/sugarcrm/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if include "host" . -}}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -92,3 +93,4 @@ spec:
       {{- else }}
         emptyDir: {}
       {{- end }}
+{{- end -}}
