--- a/incubator/sugarcrm/templates/deployment.yaml
+++ b/incubator/sugarcrm/templates/deployment.yaml
@@ -28,6 +28,8 @@ spec:
             secretKeyRef:
               name: {{ template "mariadb.fullname" . }}
               key: mariadb-root-password
+        - name: SUGARCRM_HOST
+          value: {{ include "host" . | quote }}
         - name: SUGARCRM_USERNAME
           value: {{ default "" .Values.sugarcrmUsername | quote }}
         - name: SUGARCRM_PASSWORD
@@ -38,9 +40,7 @@ spec:
         - name: SUGARCRM_EMAIL
           value: {{ default "" .Values.sugarcrmEmail | quote }}
         - name: SUGARCRM_LASTNAME
-          value: {{ default "" .Values.sugarcrmLastname | quote }}
-        - name: SUGARCRM_HOST
-          value: {{ default "" .Values.sugarcrmHost | quote }}
+          value: {{ default "" .Values.sugarcrmLastName | quote }}
         - name: SUGARCRM_SMTP_HOST
           value: {{ default "" .Values.sugarcrmSmtpHost | quote }}
         - name: SUGARCRM_SMTP_PORT
@@ -70,7 +70,7 @@ spec:
             path: /
             port: http
           initialDelaySeconds: 30
-          timeoutSeconds: 5
+          timeoutSeconds: 1
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
