Fix minor issue, but closes https://github.com/bitnami/charts/issues/211. Also allows launching a RO container

--- a/incubator/node/templates/deployment.yaml
+++ b/incubator/node/templates/deployment.yaml
@@ -40,10 +40,10 @@ spec:
             ]
           },
           {
-            "name": "fix-permissions",
+            "name": "fixing-permissions",
             "image": "{{ .Values.image }}",
             "imagePullPolicy": "{{ .Values.imagePullPolicy }}",
-            "command": [ "/bin/sh", "-c" , "chown bitnami: -R /app /home/bitnami {{ .Values.persistence.path }}" ],
+            "command": [ "/bin/sh", "-c" , "chown bitnami:bitnami -R /app /home/bitnami {{ .Values.persistence.path }}"],
             "volumeMounts": [
               {
                 "name": "app",
