--- a/incubator/parse/values.yaml
+++ b/incubator/parse/values.yaml
@@ -32,7 +32,7 @@ parse:
   ## Parse Server App ID
   ## ref: https://github.com/bitnami/bitnami-docker-parse#configuration
   ##
-  appId: myAppID
+  appId: myappID
 
   ## Parse Server Master Key
   ## ref: https://github.com/bitnami/bitnami-docker-parse#configuration
