--- a/incubator/mariadb-cluster/Chart.yaml
+++ b/incubator/mariadb-cluster/Chart.yaml
@@ -15,3 +15,4 @@ maintainers:
 - name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
+icon: https://bitnami.com/assets/stacks/mariadb/img/mariadb-stack-110x117.png
