--- a/incubator/mariadb-cluster/templates/secrets.yaml
+++ b/incubator/mariadb-cluster/templates/secrets.yaml
@@ -9,6 +9,10 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  mariadb-root-password: {{ default "" .Values.mariadbRootPassword | b64enc | quote }}
+  {{ if .Values.mariadbRootPassword }}
+  mariadb-root-password: {{ .Values.mariadbRootPassword | b64enc | quote }}
+  {{ else }}
+  mariadb-root-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
   mariadb-password: {{ default "" .Values.mariadbPassword | b64enc | quote }}
   mariadb-replication-password: {{ default "" .Values.mariadbReplicationPassword | b64enc | quote }}
