mariadb-cluster: fix health probe commands

--- a/incubator/mariadb-cluster/templates/slave-deployment.yaml
+++ b/incubator/mariadb-cluster/templates/slave-deployment.yaml
@@ -61,15 +61,17 @@ spec:
         livenessProbe:
           exec:
             command:
-            - mysqladmin
-            - ping
+            - sh
+            - -c
+            - exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD
           initialDelaySeconds: 60
           timeoutSeconds: 5
         readinessProbe:
           exec:
             command:
-            - mysqladmin
-            - ping
+            - sh
+            - -c
+            - exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD
           initialDelaySeconds: 5
           timeoutSeconds: 1
         resources:
