mariadb-cluster: generate random password for replication user

--- a/incubator/mariadb-cluster/templates/secrets.yaml
+++ b/incubator/mariadb-cluster/templates/secrets.yaml
@@ -15,4 +15,8 @@ data:
   mariadb-root-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ end }}
   mariadb-password: {{ default "" .Values.mariadbPassword | b64enc | quote }}
-  mariadb-replication-password: {{ default "" .Values.mariadbReplicationPassword | b64enc | quote }}
+  {{ if .Values.mariadbReplicationPassword }}
+  mariadb-replication-password: {{ .Values.mariadbReplicationPassword | b64enc | quote }}
+  {{ else }}
+  mariadb-replication-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
