--- a/incubator/mariadb-cluster/templates/secrets.yaml
+++ b/incubator/mariadb-cluster/templates/secrets.yaml
@@ -14,7 +14,13 @@ data:
   {{ else }}
   mariadb-root-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ end }}
-  mariadb-password: {{ default "" .Values.mariadbPassword | b64enc | quote }}
+  {{ if .Values.mariadbUser }}
+  {{ if .Values.mariadbPassword }}
+  mariadb-password: {{ .Values.mariadbPassword | b64enc | quote }}
+  {{ else }}
+  mariadb-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
+  {{ end }}
   {{ if .Values.mariadbReplicationPassword }}
   mariadb-replication-password: {{ .Values.mariadbReplicationPassword | b64enc | quote }}
   {{ else }}
