--- a/incubator/mariadb-cluster/templates/slave-deployment.yaml
+++ b/incubator/mariadb-cluster/templates/slave-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  replicas: {{ default "1" .Values.replicasCount }}
+  replicas: {{ default "1" .Values.numSlaves }}
   template:
     metadata:
       labels:
